kubernetes/graphana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - graphana.hastiamin.co.uk
      secretName: graphana-tls
  rules:
    - host: graphana.hastiamin.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
